; ModuleID = '/home/carl/AnghaBench/git/extr_argv-array.c_argv_array_pushv.c'
source_filename = "/home/carl/AnghaBench/git/extr_argv-array.c_argv_array_pushv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.argv_array = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @argv_array_pushv(%struct.argv_array* %0, i8** %1) #0 {
  %3 = alloca %struct.argv_array*, align 8
  %4 = alloca i8**, align 8
  store %struct.argv_array* %0, %struct.argv_array** %3, align 8
  store i8** %1, i8*** %4, align 8
  br label %5

5:                                                ; preds = %14, %2
  %6 = load i8**, i8*** %4, align 8
  %7 = load i8*, i8** %6, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %9, label %17

9:                                                ; preds = %5
  %10 = load %struct.argv_array*, %struct.argv_array** %3, align 8
  %11 = load i8**, i8*** %4, align 8
  %12 = load i8*, i8** %11, align 8
  %13 = call i32 @argv_array_push(%struct.argv_array* %10, i8* %12)
  br label %14

14:                                               ; preds = %9
  %15 = load i8**, i8*** %4, align 8
  %16 = getelementptr inbounds i8*, i8** %15, i32 1
  store i8** %16, i8*** %4, align 8
  br label %5

17:                                               ; preds = %5
  ret void
}

declare dso_local i32 @argv_array_push(%struct.argv_array*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
